--- a/package.json
+++ b/package.json
@@ -9,20 +9,38 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.2.18",
+    "@expo-google-fonts/poppins": "^0.2.3",
+    "@expo/metro-runtime": "~3.2.3",
+    "@rn-primitives/checkbox": "^1.0.4",
+    "@types/react-native-vector-icons": "^6.4.18",
     "expo": "^51.0.0",
+    "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.1",
-    "expo-linking": "~6.3.1",
+    "expo-font": "^12.0.10",
+    "expo-linking": "^6.3.1",
     "expo-router": "~3.5.9",
+    "expo-secure-store": "^13.0.2",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
+    "expo-vector-icons": "^10.0.1",
+    "expo-web-browser": "^13.0.3",
+    "lucide-react-native": "^0.447.0",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-appwrite": "^0.5.0",
+    "react-native-otp-entry": "^1.7.2",
     "react-native-reanimated": "3.10.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.7.1",
+    "react-native-toast-message": "^2.2.1",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
