chore: remove clerk

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Z3JlYXQtcHJhd24tNzIuY2xlcmsuYWNjb3VudHMuZGV2JA
-CLERK_SECRET_KEY=sk_test_XzoNN6eSZwKKdGGQ1gGFs1emLryYs9pqjmJlTze3m8
+EXPO_PUBLIC_GOOGLE_CLIENT_ID="100790250841-e4ccdj0gke9u3aoq1f5tc3vrma4u5g7t.apps.googleusercontent.com"
