--- a/.env
+++ b/.env
@@ -1,1 +1,15 @@
-EXPO_PUBLIC_GOOGLE_CLIENT_ID="100790250841-e4ccdj0gke9u3aoq1f5tc3vrma4u5g7t.apps.googleusercontent.com"
+EXPO_PUBLIC_GOOGLE_CLIENT_ID="100790250841-rau6s9tml8q5cq4kfm2bkkve06m90s2g.apps.googleusercontent.com"
+EXPO_PUBLIC_REDIRECT_SCHEME="com.finneancarmichael.relearn"
+EXPO_PUBLIC_SERVER_URL="http://192.168.137.1:3009"
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="" # only using schema for types here.s
+
+# development only
+REACT_NATIVE_PACKAGER_HOSTNAME="192.168.137.1"
